[package]
name = "pcopy"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/IRSMsoso/pcopy"
readme = "README.md"
description = "Simple cli tool to copy a file or directory to a directory with a progress bar"
license = "MIT"


[dependencies]
fs_extra = "1.3.0"
clap = { version = "4.5.9", features = ["derive"] }
indicatif = "0.17.8"
anyhow = "1.0.86"
